[project]
name = "lasaft-net-v2-for-pytorch2"
version = "0.1.0"
description = ""
authors = [
    {name = "ChengHsienChen1996",email = "g8963458741@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "aicrowd-api (>=0.1.25,<0.2.0)",
    "coloredlogs (>=15.0.1,<16.0.0)",
#    "numpy (>=2.2.3,<3.0.0)",
     "numpy (<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "boto3 (>=1.37.3,<2.0.0)",
    "openunmix (>=1.3.0,<2.0.0)",
    "musdb (>=0.4.2,<0.5.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "norbert (>=0.2.1,<0.3.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pytorch-lightning (>=2.5.0.post0,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "hydra-colorlog (>=1.2.0,<2.0.0)",
    "hydra-optuna-sweeper (>=1.2.0,<2.0.0)",
    "wandb (>=0.19.7,<0.20.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "flake8 (>=7.1.2,<8.0.0)",
    "jupyterlab (>=4.3.5,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "sh (>=2.2.2,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "safetensors (>=0.5.3,<0.6.0)",
    "stempeg (>=0.2.3)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
